[gd_scene load_steps=20 format=3 uid="uid://c11dcmcujk3gn"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_5r55a"]
[ext_resource type="Script" path="res://Scripts/FSM_Player.gd" id="2_essbp"]
[ext_resource type="Texture2D" uid="uid://qijsyp2lspwj" path="res://Assets/Sprites/Player/player_torso_sprite.png" id="2_hvvpt"]
[ext_resource type="Texture2D" uid="uid://cgnstnrfkn47h" path="res://Assets/Sprites/Player/player_head_sprite.png" id="3_0ghtn"]
[ext_resource type="PackedScene" uid="uid://bortldyrewr18" path="res://Scenes/health_component.tscn" id="4_8806k"]
[ext_resource type="Texture2D" uid="uid://b3h7w8omk63rs" path="res://Assets/Sprites/Player/player_arms_sprite.png" id="4_wftel"]
[ext_resource type="Texture2D" uid="uid://c8su5daypvhbv" path="res://Assets/Sprites/Player/player_legs_sprite.png" id="5_3ehwc"]
[ext_resource type="PackedScene" uid="uid://ch2diffpricnp" path="res://Scenes/hitbox_component.tscn" id="5_a7g8b"]
[ext_resource type="PackedScene" uid="uid://by01k7h65l7xb" path="res://Scenes/pistol_start.tscn" id="7_wuhc3"]
[ext_resource type="Texture2D" uid="uid://d4coh48jn31jh" path="res://Assets/Sprites/Effects/light.png" id="8_4wcr7"]
[ext_resource type="Script" path="res://Scripts/Dynamic_camera.gd" id="11_cgcgf"]
[ext_resource type="AudioStream" uid="uid://cw073gehqgo47" path="res://Assets/Sound/player_walk_sound_1.mp3" id="12_l2prc"]
[ext_resource type="AudioStream" uid="uid://bowk0esd1abe" path="res://Assets/Sound/gunpickup2.wav" id="13_voytc"]

[sub_resource type="Animation" id="Animation_wsa87"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/Torso:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-1, -23), Vector2(-1, -22), Vector2(-1, -22), Vector2(-1, -23)]
}

[sub_resource type="Animation" id="Animation_wuylf"]
resource_name = "Walk_Backward"
length = 0.8
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 10, 9, 8, 7, 6, 5, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/Torso:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-1, -23), Vector2(-1, -22), Vector2(-1, -23), Vector2(-1, -22)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.09),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_step_audio"
}]
}

[sub_resource type="Animation" id="Animation_37ioi"]
resource_name = "Walk_Forward"
length = 0.8
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/Torso:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-1, -22), Vector2(-1, -23), Vector2(-1, -22), Vector2(-1, -23)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.09),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_step_audio"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2tle"]
_data = {
"Idle": SubResource("Animation_wsa87"),
"Walk_Backward": SubResource("Animation_wuylf"),
"Walk_Forward": SubResource("Animation_37ioi")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s1wa8"]
radius = 5.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgykc"]
size = Vector2(17, 40)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_5r55a")

[node name="FSM" type="Node" parent="."]
script = ExtResource("2_essbp")

[node name="PlayerSprite" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Torso" type="Sprite2D" parent="PlayerSprite"]
position = Vector2(-1, -23)
texture = ExtResource("2_hvvpt")

[node name="Head" type="Sprite2D" parent="PlayerSprite/Torso"]
position = Vector2(1, -11)
texture = ExtResource("3_0ghtn")
hframes = 7

[node name="Arm_F" type="Sprite2D" parent="PlayerSprite/Torso"]
z_index = 2
y_sort_enabled = true
position = Vector2(-4, -1)
texture = ExtResource("4_wftel")
offset = Vector2(5, 2)
hframes = 2

[node name="Hand" type="Marker2D" parent="PlayerSprite/Torso/Arm_F"]
z_as_relative = false
position = Vector2(9, 1)

[node name="Weapons" type="Node2D" parent="PlayerSprite/Torso/Arm_F/Hand"]
z_index = 1

[node name="StartPistol" parent="PlayerSprite/Torso/Arm_F/Hand/Weapons" instance=ExtResource("7_wuhc3")]

[node name="AimArm_B" type="Marker2D" parent="PlayerSprite/Torso/Arm_F"]
position = Vector2(31, 1)

[node name="AimPivot" type="Marker2D" parent="PlayerSprite/Torso"]
position = Vector2(1, 0)

[node name="Arm_B" type="Sprite2D" parent="PlayerSprite/Torso"]
z_index = -1
position = Vector2(3, -1)
texture = ExtResource("4_wftel")
offset = Vector2(6, 0)
hframes = 2
frame = 1

[node name="Legs" type="Sprite2D" parent="PlayerSprite"]
position = Vector2(0, -14)
texture = ExtResource("5_3ehwc")
hframes = 4
vframes = 3

[node name="LegsAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w2tle")
}
speed_scale = 1.8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_s1wa8")

[node name="PointLight2D" type="PointLight2D" parent="."]
z_index = 10
y_sort_enabled = true
position = Vector2(0, -16)
scale = Vector2(2.17625, 2.80964)
color = Color(0.0941176, 0.0941176, 0.0941176, 1)
range_z_min = 0
range_z_max = 1
shadow_filter = 1
texture = ExtResource("8_4wcr7")
texture_scale = 0.1

[node name="HealthComponent" parent="." instance=ExtResource("4_8806k")]
max_health = 8

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_a7g8b")]
collision_layer = 2
collision_mask = 0
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_vgykc")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true
position_smoothing_speed = 3.0
script = ExtResource("11_cgcgf")

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_l2prc")
volume_db = -10.0
bus = &"Sound"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_voytc")
volume_db = -10.0
bus = &"Sound"
